margin, padding mixins 추가. card component 개발

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,8 +1,12 @@
 @import "./mixins";
+@import "./color";
+
+body {
+  margin: 0;
+}
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 15px;
   margin-right: auto;
   margin-left: auto;
 }
