--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -8,3 +8,29 @@
     line-height: $line-height;
     height: $line-height * $line-cnt;
 }
+
+$max: 60;
+$offset: 4;
+$unit: 'px';
+
+@mixin list-loop($className, $styleName) {
+    $i: 0;
+    @while $i <= $max {
+        #{$className + ($i / 4)} {
+            #{$styleName}: #{$i + $unit};
+        }
+        $i: $i + $offset;
+    }
+}
+
+@include list-loop('.pl-', 'padding-left');
+@include list-loop('.pr-', 'padding-right');
+@include list-loop('.pt-', 'padding-top');
+@include list-loop('.pb-', 'padding-bottom');
+@include list-loop('.pa-', 'padding');
+
+@include list-loop('.ml-', 'margin-left');
+@include list-loop('.mr-', 'margin-right');
+@include list-loop('.mt-', 'margin-top');
+@include list-loop('.mb-', 'margin-bottom');
+@include list-loop('.ma-', 'margin');
